add API to cancel events
