# api/src/routes/participants/postParticipant.ts
@@ -29,6 +29,13 @@ const PostParticipantController: ControllerCreator = ({
     };
   }
 
+  if (!!event.canceledAt) {
+    return {
+      status: 409,
+      body: { message: 'Event is canceled' },
+    };
+  }
+
   const participant = await getParticipant({ eventId, userId: user.id });
   if (participant) {
     return {
