# web-app/src/types.ts
@@ -60,6 +60,7 @@ export type Event = {
   id: string;
   createdAt: string;
   startsAt: string;
+  canceledAt?: string;
   venue: Venue;
   sport: Sport;
   duration: number;
